--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -15,7 +15,7 @@
     .controls {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
   position: absolute;
   top: 720px;
   left: 50%;
@@ -188,6 +188,7 @@ div.description {
 
 .field {
   z-index: 50;
+  height: 90vh;
 }
 
 .grid {
