--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -3,7 +3,7 @@
 <head >
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,400,800" rel="stylesheet">
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=100vh">
     <title>2048 Game</title>
 <style type="text/css">
     body {
@@ -188,7 +188,6 @@ div.description {
 
 .field {
   z-index: 50;
-  height: 90vh;
 }
 
 .grid {
