--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -173,8 +173,8 @@ div.description {
 /* field */
 .field, .grid {
   position: absolute;
-  width: 510px;
-  height: 510px;
+  width: 50vh;
+  height: 50vh;
   background-color: #888;
   top: 150px;
   border-radius: 0px;
