--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -174,7 +174,7 @@ div.description {
 .field, .grid {
   position: absolute;
   width: 50vh;
-  height: 50vh;
+  height: 40vh;
   background-color: #888;
   top: 150px;
   border-radius: 0px;
@@ -203,8 +203,8 @@ div.description {
 
 .cell, .grid_cell {
   background-color: white;
-  width: 125px;
-  height: 125px;
+  width: 5vh;
+  height: 5vh;
   position: relative;
   display: table-cell;
   border-radius: 0px;
