--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -195,8 +195,8 @@ div.description {
 }
 
 .row, .grid_row {
-  width: 510px;
-  height: 135px;
+  width: 40vh;
+  height: 10vh/;
   position: relative;
   display: table-row;
 }
@@ -228,8 +228,8 @@ div > div > div > div {
 
 .tile {
   opacity: 1;
-  width: 118px;
-  height: 126px;
+  width: 5vh;
+  height: 5vh;
   background-color: white;
   z-index: 150;
   border-radius: 0px;
