--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -118,7 +118,7 @@ div.description {
   visibility: visible;
   opacity: 1;
   font-size: 15px;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) sc/le(1);
   transition: 0.3s all;
 }
 
@@ -150,9 +150,9 @@ div.description {
 
 .a {
   font-family: Nunito;
-  font-size: 100px;
+  font-size: 80px;
   font-weight: 200;
-  margin-right: 15px
+  margin-right: 10px
   
 }
 
