--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -3,7 +3,7 @@
 <head >
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,400,800" rel="stylesheet">
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=100vh">
+    <meta name="viewport" content="width=100%, initial-scale=1.0, height=100vh">
     <title>2048 Game</title>
 <style type="text/css">
     body {
@@ -17,7 +17,7 @@
   justify-content: center;
   gap: 20px;
   position: absolute;
-  top: 720px;
+  top: 500px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -196,7 +196,7 @@ div.description {
 
 .row, .grid_row {
   width: 40vh;
-  height: 10vh/;
+  height: 20vh;
   position: relative;
   display: table-row;
 }
@@ -228,8 +228,8 @@ div > div > div > div {
 
 .tile {
   opacity: 1;
-  width: 5vh;
-  height: 5vh;
+  width: 10vh;
+  height: 10vh;
   background-color: white;
   z-index: 150;
   border-radius: 0px;
