--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -196,7 +196,7 @@ div.description {
 
 .row, .grid_row {
   width: 40vh;
-  height: 20vh;
+  height: 15vh;
   position: relative;
   display: table-row;
 }
@@ -228,8 +228,8 @@ div > div > div > div {
 
 .tile {
   opacity: 1;
-  width: 10vh;
-  height: 10vh;
+  width: 11vh;
+  height: 11vh;
   background-color: white;
   z-index: 150;
   border-radius: 0px;
@@ -680,4 +680,4 @@ document.getElementById('repeat').addEventListener('click', function() {
   gameOverMessage.style.visibility = 'hidden'; // Приховуємо плашку
 });
   </script>
-</body>s
+</body>
