--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -17,7 +17,7 @@
   justify-content: center;
   gap: 20px;
   position: absolute;
-  top: 500px;
+  top: 600px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -279,7 +279,7 @@ div > div > div > div {
   <div class="game">
     <div class="head">
       <div class="a">2048 <button class="info" onClick='info()'>i</button> <button id="repeat" class="info repeat" onClick='reset()'>↻</button></div>
-      <div class="score">Score<br/><span id="value"></span></div>
+      <div class="score">Score:<br/><span id="value"></span></div>
     </div>
     <div class="description" id="description">
     How to play:<br/><br/>
