--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -7,7 +7,7 @@
     <title>2048 Game</title>
 <style type="text/css">
     body {
-  background-color: #fff;
+  background-color: #FFF8AF;
   overflow: hidden;
   paddin: 0;
   margin: 0;
@@ -270,7 +270,7 @@ div > div > div > div {
 }
 
 .lose {
-  background-color: #fff;
+  background-color: #FFF8AF;
 }
 </style>
 </head>
