--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -49,6 +49,7 @@ button.move:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #C17B00;
 }
 
 div.game {
@@ -63,7 +64,8 @@ div.game {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 30px; /* Зміщення вниз */
+  margin-top: 20px; /* Зміщення вниз */
+  background-color: #C17B00;
 }
 
 .info, .repeat {
