--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -28,13 +28,13 @@ button.move {
   cursor: pointer;
   border-radius: 5px;
   border: none;
-  background-color: #88b1ef;
+  background-color: #FFE0A8;
   color: white;
   transition: background-color 0.3s;
 }
 
 button.move:hover {
-  background-color: #6593d8;
+  background-color: #FFD489;
 }
 
 
