--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -17,18 +17,18 @@
   justify-content: center;
   gap: 10px;
   position: absolute;
-  top: 600px;
+  top: 80vh;
   left: 50%;
   transform: translateX(-50%);
 }
 
 button.move {
   font-size: 30px;
-  padding: 30px 40px;
+  padding: 20px 30px;
   cursor: pointer;
   border-radius: 5px;
   border: none;
-  background-color: #FFE0A8;
+  background-color: #F7CA7A;
   color: white;
   transition: background-color 0.3s;
 }
@@ -49,7 +49,7 @@ button.move:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #C17B00;
+  background-color: #F7CA7A;
 }
 
 div.game {
@@ -65,7 +65,7 @@ div.game {
   align-items: center;
   justify-content: center;
   margin-top: 20px; /* Зміщення вниз */
-  background-color: #C17B00;
+  background-color: #F7CA7A;
 }
 
 .info, .repeat {
@@ -132,7 +132,7 @@ div.description {
   cursor: pointer;
   border: 0px;
   border-color: #aaa;
-  background-color: #88b1ef;
+  background-color: #F0BB60;
   color: #fff;
   font-size: 20px;
   top: 50px;
@@ -152,9 +152,11 @@ div.description {
 
 .a {
   font-family: Nunito;
-  font-size: 80px;
+  font-size: 7vh;
   font-weight: 200;
-  margin-right: 10px
+  margin-right: 10px;
+  color: white;
+  background-color: FFD489;
   
 }
 
@@ -210,7 +212,7 @@ div.description {
   position: relative;
   display: table-cell;
   border-radius: 0px;
-  border: 5px solid #888;
+  border: 4px solid #888;
   text-align: center;
   vertical-align: middle;
   font-family: nunito;
@@ -230,8 +232,8 @@ div > div > div > div {
 
 .tile {
   opacity: 1;
-  width: 12vh;
-  height: 15vh;
+  width: 11.9vh;
+  height: 14.1vh;
   background-color: white;
   z-index: 150;
   border-radius: 0px;
