--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -34,7 +34,7 @@ button.move {
 }
 
 button.move:hover {
-  background-color: #FFD489;
+  background-color: #E4B86E;
 }
 
 
@@ -157,7 +157,7 @@ div.description {
   font-family: Nunito;
   font-size: 7vh;
   font-weight: 200;
-  margin-right: 50px;
+  margin-right: 10px;
   color: white;
   background-color: FFD489;
   
