--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -159,7 +159,7 @@ div.description {
   font-family: Nunito;
   font-size: 7vh;
   font-weight: 200;
-  margin-right: 10px;
+  margin-right: 2vh;
   color: white;
   background-color: FFD489;
   
