--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -32,6 +32,7 @@ button.move {
   color: white;
   transition: background-color 0.3s;
   box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
+  outline: none;
 }
 
 button.move:hover {
