--- a/WEBAPP.html
+++ b/WEBAPP.html
@@ -37,13 +37,14 @@ button.move {
 
 button.move:hover {
   background-color: #E4B86E;
+  outline: none;
 }
 
 
 /* head */
 .head {
   height: 120px;
-  width: 510px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -61,7 +62,7 @@ div.game {
 
 .head {
   height: 120px;
-  width: 510px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -163,7 +164,7 @@ div.description {
   margin-right: 2vh;
   color: white;
   background-color: FFD489;
-  
+  position: relative;
 }
 
 .score {
